# vsl_motion_planner

./: dependencies.rosinstall
vsl_descartes_moveit/: CMakeLists.txt  package.xml
vsl_descartes_moveit/include/: const_ee_speed_time_parameterization.h  time_optimal_trajectory_generation.h  vsl_descartes_moveit_planner.h
vsl_descartes_moveit/launch/: vsl_course.launch  vsl_descartes_moveit_planner.launch  vsl_moveit_setup.launch  vsl_planner.launch
vsl_descartes_moveit/pictures/older/: vsl_launch_files.drawio  vsl_msc_flow_chart.drawio  vsl_planner_descartes_flow_chart.drawio  vsl_repositories.drawio  vsl_simple_flow.xml
vsl_descartes_moveit/src/: vsl_descartes_moveit_main.cpp
vsl_descartes_moveit/src/task/: const_ee_speed_time_parameterization.cpp  generate_trajectory.cpp  get_course.cpp  init_descartes.cpp  init_ros.cpp  plan_path.cpp  run_path.cpp  time_optimal_trajectory_generation.cpp
vsl_descartes_moveit/trial_txt_files/01_11_2019/: rsi_xml_doc_01_11.txt  simulated_ee_request_01_11.txt  simulated_joint_request_01_11.txt  simulated_joint_states_01_11.txt
vsl_descartes_moveit/trial_txt_files/03_12_2019/: rsi_const_laydown_speed.txt  sim_ee_request.txt  sim_joint_request.txt  sim_joint_states.txt
vsl_descartes_moveit/trial_txt_files/14_11_2019/: 10_angle_spline_rsi.txt  with_time_parameterization_parabolic_rsi.txt
vsl_descartes_tesseract/: CMakeLists.txt  package.xml
vsl_descartes_tesseract/include/: vsl_descartes_tesseract_planner.h
vsl_descartes_tesseract/launch/: vsl_descartes_tesseract_planner.launch
vsl_descartes_tesseract/src/: descartes_init_traj.cpp  descartes_problem_construction.cpp  run_descartes.cpp  vsl_descartes_tesseract_main.cpp
vsl_motion_planner/: CMakeLists.txt  package.xml
vsl_msgs/: CMakeLists.txt  package.xml
vsl_msgs/examples/: 3dSimplePath.txt  ExampleAndreFlat.txt  ExampleRik2.txt  ExampleRik3.txt  ExampleRik4.txt  binormal_simplePath.txt  circularPath.txt  complexPath.txt  descartes_dense_25Hz_sim_joint_request.txt  descartes_joint_request.txt  descartes_sparse_25Hz_sim_joint_request.txt  descartes_sparse_50Hz_sim_joint_request.txt  descartes_sparse_5Hz_sim_joint_request.txt  normal_simplePath.txt  simplePath.txt  tangent_simplePath.txt  weirdPath.txt
vsl_msgs/msg/: EERequest.msg  JointRequest.msg
vsl_msgs/srv/: PoseBuilder.srv
vsl_ompl_moveit/: CMakeLists.txt  package.xml
vsl_ompl_moveit/config/: config.rviz
vsl_ompl_moveit/include/: const_ee_speed_time_parameterization.h  vsl_ompl_moveit_planner.h
vsl_ompl_moveit/launch/: vsl_moveit_setup.launch  vsl_ompl_moveit_planner.launch
vsl_ompl_moveit/src/: const_ee_speed_time_parameterization.cpp  ompl_planner_construction.cpp  vsl_ompl_moveit_main.cpp
vsl_trajopt_tesseract/: CMakeLists.txt  package.xml
vsl_trajopt_tesseract/config/: config.rviz
vsl_trajopt_tesseract/include/: const_ee_speed_time_parameterization.h  example.h  pick_and_place_example.h  vsl_trajopt_planner.h
vsl_trajopt_tesseract/launch/: pick_and_place_example.launch  vsl_tesseract_setup.launch  vsl_trajopt_planner.launch
vsl_trajopt_tesseract/src/: const_ee_speed_time_parameterization.cpp  descartes_init_traj.cpp  pick_and_place_example.cpp  pick_and_place_example_node.cpp  problem_construction.cpp  run_trajopt.cpp  vsl_trajopt_main.cpp
vsl_trajopt_tesseract/urdf/: environment.xacro  pick_and_place_plan.xacro
vsl_trajopt_tesseract/urdf/iiwa7/: iiwa7.xacro
vsl_utilities/: CMakeLists.txt  package.xml
vsl_utilities/include/: course_display_topic.h  ee_cartesian_pose_publisher.h  ee_request_publisher.h  ee_state_publisher.h  joint_request_publisher.h  pose_builder_server.h
vsl_utilities/launch/: path_creation.launch  vsl_motion_planning_pipeline.launch
vsl_utilities/src/: course_display.cpp  ee_cartesian_pose_publisher.cpp  ee_request_publisher.cpp  ee_state_publisher.cpp  joint_request_publisher.cpp  pose_builder.cpp  pose_builder.py
vsl_utilities/src/future_work/: interface.cpp
vsl_utilities/src/python/: normal_and _curvature.py  read_both_ros_and_rsi_files.py  read_kuka_data.py  read_ros_topic_for edit.py
vsl_utilities/src/python_make_plots/: 00_kuka_plots.py  01_external_control.py  01_normal_and _curvature.py  02_motion_planner.py  02_motion_time_param.py  03_accuracy.py  bspline.py  external_control.py  normal_and _curvature.py  read_all_three_files.py  read_both_kuka_and_rsi.py  read_both_ros_and_rsi_files.py  read_ros_topic files.py  read_rsi_xml_doc.py
