<?xml version="1.0"?>
<package format="2">
  <name>vsl_msgs</name>
  <version>0.1.0</version>
  <description>This package contains messages related to this repository.</description>

  <author>Andre Florindo - TU Delft</author>
  <maintainer email="a.m.mendesflorindo@student.tudelft.nl">Andre Florindo</maintainer>
  <license>Tu Delft</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

</package>

