<?xml version="1.0"?>
<package format="2">
  <name>vsl_trajopt_tesseract</name>
  <version>0.1.0</version>
  <description>This package contains vsl motion planner using trajopt together with tesseract</description>

  <maintainer email="a.m.mendesflorindo@student.tudelft.nl">Andre Florindo</maintainer>
   <license>Tu Delft</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>roslib</depend>
  <depend>trajopt</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_common</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>vsl_msgs</depend>
  <depend>control_msgs</depend>
  
  <exec_depend>tesseract_rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
