<?xml version="1.0"?>
<package format="2">
  <name>vsl_utilities</name>
  <version>0.1.0</version>
  <description>This package contains utilities related to this repository.</description>

  <author>Andre Florindo - TU Delft</author>
  <maintainer email="a.m.mendesflorindo@student.tudelft.nl">Andre Florindo</maintainer>
  <license>Tu Delft</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>roslib</depend>
  <depend>eigen_conversions</depend>
  <depend>vsl_msgs</depend>
  <depend>tf</depend>
  
  <export>
  </export>
</package>